--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,66 @@
 <nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+	<!-- Brand and toggle get grouped for better mobile display -->
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Меню</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">DaiDaKaram.com</a>
-  </div>
+		<a class="navbar-brand" href="#">DaiDaKaram.com</a>
+	</div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
+	<!-- Collect the nav links, forms, and other content for toggling -->
+	<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="#">Link</a></li>
+			<li><a href="#">Link</a></li>
+		</ul>
+		<form class="navbar-form navbar-left" role="search">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search">
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form>
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href="#">Link</a></li>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+				<ul class="dropdown-menu">
+					<li><a href="#">Action</a></li>
+					<li><a href="#">Another action</a></li>
+					<li><a href="#">Something else here</a></li>
+					<li><a href="#">Separated link</a></li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+	<!-- /.navbar-collapse -->
 </nav>
 
 
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-      <app-category-panel></app-category-panel>
-      <app-category-panel></app-category-panel>
-      <app-category-panel></app-category-panel>
-  </div>
-</div>
+	<app-category-panel *ngFor="let c of categories" 
+		(onDelete)="updateCategoryPanels()"
+		[category]="c"></app-category-panel>
+	<!--<app-category-panel></app-category-panel>-->
 
+	<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2 class="panel-title">Нова категория</h2>
+			</div>
+			<div class="panel-body">
+				<div class="input-group">
+					<input #newCategory type="text" class="form-control" placeholder="Нова категория">
+					<span class="input-group-btn">
+						<button (click)="addCategory(newCategory.value);newCategory.value=''" class="btn btn-success" type="button">
+							<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+						</button>
+					</span>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
