--- a/src/app/category-panel/category-panel.component.html
+++ b/src/app/category-panel/category-panel.component.html
@@ -1,3 +1,72 @@
-<p>
-  category-panel works!
-</p>
+<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2 *ngIf="!category.updateMode" class="panel-title">{{category.name}}
+				<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
+					<div class="btn-group btn-group-xs" role="group" aria-label="...">
+						<button (click)="toggleUpdateMode(category)" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+						<button (click)="deleteCategory(category)" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+					</div>
+				</div>
+			</h2>
+				<div *ngIf="category.updateMode" class="input-group">
+					<input #name [(ngModel)]="category.name" type="text" class="form-control" placeholder="Име на категорията">
+					<span class="input-group-btn">
+						<button (click)="updateCategory(category);toggleUpdateMode(category)" class="btn btn-success" type="button">
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+						</button>
+					</span>
+				</div>
+		</div>
+		<div class="panel-body">
+			<ol>
+				<li *ngFor="let sc of category.subCategories">
+					
+					<a *ngIf="!sc.updateMode" class="inline" href="#">{{sc.name}}</a>
+					<div *ngIf="!sc.updateMode" class="btn-toolbar pull-right inline" role="toolbar" aria-label="...">
+						<div class="btn-group btn-group-xs" role="group" aria-label="...">
+							<button (click)="toggleUpdateMode(sc)" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+							<button (click)="deleteCategory(sc)" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+						</div>
+					</div>
+
+					<div *ngIf="sc.updateMode" class="input-group input-group-xs">
+						<input [(ngModel)]="sc.name" type="text" class="form-control" placeholder="Име на подкатегорията">
+						<span class="input-group-btn">
+							<button (click)="updateSubCategory(sc);toggleUpdateMode(sc)" class="btn btn-success" type="button">
+								<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+							</button>
+						</span>
+					</div>
+
+				</li>
+				<!--<li><a href="#">Пружинно окачване</a></li>
+				<li><a href="#">Амортисьори</a></li>
+				<li><a href="#">Пружини</a></li>
+				<li><a href="#">Амортисьорна сфера</a></li>
+				<li><a href="#">Тампон амортисьор</a></li>
+				<li><a href="#">Прахоуловители за амортисьори</a></li>
+				<li><a href="#">Окачване на колелата</a></li>
+				<li><a href="#">Носачи</a></li>
+				<li><a href="#">Тампони</a></li>
+				<li><a href="#">Биалетки</a></li>
+				<li><a href="#">Тампон заден мост</a></li>
+				<li><a href="#">Тампони стабилизираща щанга</a></li>
+				<li><a href="#">Главина</a></li>
+				<li><a href="#">Лагер главина</a></li>
+				<li><a href="#">Шарнири</a></li>
+				<li><a href="#">Шенкел</a></li>
+				<li><a href="#">Ремонтен компект за шенкел</a></li>
+				<li><a href="#">Болтове за джанти</a></li>-->
+			</ol>
+			<div class="input-group">
+				<input #newSubCategory type="text" class="form-control" placeholder="Нова подкатегория">
+				<span class="input-group-btn">
+				<button (click)="addSubCategory(newSubCategory.value);newSubCategory.value=''" class="btn btn-success" type="button">
+					<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+				</button>
+				</span>
+			</div>
+		</div>
+	</div>
+</div>
