--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -33,7 +33,7 @@
         <td>{{p.sku}}</td>
         <td>{{p.name}}</td>
         <td>{{p.price}}</td>
-        <td>{{p.category?.name}}</td>
+        <td>{{p.categoryName}}</td>
         <td>
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
         </td>
@@ -60,7 +60,10 @@
         <div class="input-group-addon">лв.</div>
       </div>
             
-      <select name="category" class="form-control" required="required" [(ngModel)]="product.category" style="width: 67%">
+      <select name="category" class="form-control" required="required" 
+      [(ngModel)]="product.categoryId"
+      (change)="changeProductCategory($event.target.value)" 
+      style="width: 67%">
         <optgroup *ngFor="let c of categories" [label]="c.name">
           <option *ngFor="let sc of c.subCategories" [value]="sc.id">{{sc.name}}</option>
         </optgroup>
@@ -68,7 +71,7 @@
       
     </div>
   
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="button" (click)="submitProduct(product)" class="btn btn-primary">Запази</button>
   </form>
   
 </div>
