--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,10 +39,8 @@
 </nav>
 
 <div class="container-fluid">
-	<div class="row">
+	<!--<div class="row">
 		<app-category-panel *ngFor="let c of categories" (onDelete)="updateCategoryPanels()" [category]="c"></app-category-panel>
-		<!--<app-category-panel></app-category-panel>-->
-
 		<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -61,7 +59,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
+
 	<hr>
 	<div class="row">
 		<app-product-list [pageNumber]="1"></app-product-list>
