--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -70,13 +70,53 @@
 		</div>
 		<!--<button type="button" (click)="submitProduct()" class="btn btn-primary">Запази</button>-->
 
-		<!--<hr>
+		<hr>
 		<h4>Съвместимост</h4>
 		<div class="form-group" style="width: 100%">
-			<select name="make" class="form-control" style="width: 31%"><option *ngFor="let m of makes" [value]="m">{{m}}</option></select>
-			<select name="model" class="form-control" style="width: 31%"><option *ngFor="let m of models" [value]="m">{{m}}</option></select>
-			<select name="variant" class="form-control" style="width: 31%"><option *ngFor="let v of variants" [value]="v">{{v}}</option></select>
-		</div>-->
+			<select [(ngModel)]="make" 
+					(change)="onMakeChange($event.target.value)" name="make" class="form-control" style="width: 50%">
+					<option value="" disabled>Марка</option> <option *ngFor="let m of makes" [value]="m">{{m}}</option></select>
+			<select [(ngModel)]="model" 
+					(change)="onModelChange(make, $event.target.value)" 
+					[disabled]="make == null || make.length == 0" name="model" class="form-control" style="width: 49%" disabled><option value="" disabled>Модел</option><option *ngFor="let m of models" [value]="m">{{m}}</option></select>
+			<!--<select [(ngModel)]="variant" 
+					[disabled]="model == null || model.length == 0" name="variant" class="form-control" style="width: 31%" disabled><option value="" disabled>Вариант</option><option *ngFor="let v of variants" [value]="v">{{v}}</option></select>-->
+		</div>
+		<div class="form-group" style="width: 100%" *ngIf="yearFrom > 0">
+			<div class="input-group" style="width: 44%">
+				<span class="input-group-addon" id="basic-addon1">От</span>
+				<input [(ngModel)]="chosenYearFrom" name="yearFrom" type="number" class="form-control" placeholder="Година" aria-describedby="basic-addon2">
+				<span class="input-group-addon" id="basic-addon2">г.</span>
+			</div>
+			<div class="input-group" style="width: 44%">
+				<span class="input-group-addon" id="basic-addon1">До</span>
+				<input [(ngModel)]="chosenYearTo" name="yearTo" type="number" class="form-control" placeholder="Година" aria-describedby="basic-addon2">
+				<span class="input-group-addon" id="basic-addon2">г.</span>
+			</div>
+			
+			<button (click)="resetYears()" type="button" class="btn btn-small btn-warning"><span class="glyphicon glyphicon-refresh"></span></button>
+			
+		</div>
+		<div class="form-group" style="width: 100%" *ngIf="variants?.length > 1">
+			<p>Вариант: 
+				<button (click)="toggleAllVariants()" type="button" class="btn btn-xs">Всички</button> 
+			</p>
+			<label *ngFor="let v of variants">
+				<input [checked]="chosenVariants.indexOf(v) != -1" 
+					   (change)="updateVariant(v)" type="checkbox" name="variants">{{v}}</label>
+		</div>
+		<div class="form-group" style="width: 100%" *ngIf="bodies?.length > 1">
+			<p>Купе: <button (click)="toggleAllBodies()" type="button" class="btn btn-xs">Всички</button></p>
+			<label *ngFor="let b of bodies">
+				<input [checked]="chosenBodies.indexOf(b) != -1" 
+					   (change)="updateBody(b)" type="checkbox" name="bodies">{{b}}</label>
+		</div>
+		<div class="form-group" style="width: 100%" *ngIf="types?.length > 1">
+			<p>Тип: <button (click)="toggleAllTypes()" type="button" class="btn btn-xs">Всички</button></p>
+			<label *ngFor="let t of types">
+				<input [checked]="chosenTypes.indexOf(t) != -1" 
+					   (change)="updateType(t)" type="checkbox" name="types">{{t}}</label>
+		</div>
 
 
 	
