--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -23,6 +23,7 @@
 			<tr>
 				<th>SKU</th>
 				<th>Име</th>
+				<th><span class="glyphicon glyphicon-wrench"></span></th>
 				<th>Цена</th>
 				<th>Категория</th>
 				<!--<th>Съвместимост</th>-->
@@ -32,6 +33,9 @@
 			<tr *ngFor="let p of products" (click)="product = p;" [class.info]="p == product">
 				<td>{{p.sku}}</td>
 				<td>{{p.name}}</td>
+				<td>
+					<span class="glyphicon glyphicon-ok" *ngIf="p.compatibilitySettings?.length > 0"></span>
+				</td>
 				<td>{{p.price}}</td>
 				<td>{{p.categoryName}}</td>
 				<!--<td><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></td>-->
@@ -116,7 +120,7 @@
 				<td>{{c.model}}</td>
 				<td *ngIf="c.variant">{{c.variant}}</td>
 				<td *ngIf="!c.variant"><i>&lt;всички&gt;</i></td>
-				<!--<td><button ()="if(confirm('Изтриване ?')) deleteCompatibilityRow(c.id)" type="button" class="btn btn-small btn-danger"><span class="glyphicon glyphicon-remove"></span></button></td>-->
+				<td><button (click)="deleteCompatibilitySetting(c.id)" type="button" class="btn btn-small btn-danger"><span class="glyphicon glyphicon-remove"></span></button></td>
 			</tr>
 		</tbody>
 	</table>
