--- a/src/app/category-panel/category-panel.component.html
+++ b/src/app/category-panel/category-panel.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2 *ngIf="!category.updateMode" class="panel-title">{{category.name}}
+			<h2 *ngIf="!category.updateMode" class="panel-title">{{category.name}} ({{category.subCategories.length}})
 				<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
 					<div class="btn-group btn-group-xs" role="group" aria-label="...">
 						<button (click)="toggleUpdateMode(category)" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
@@ -20,7 +20,7 @@
 		</div>
 		<div class="panel-body">
 			<ol>
-				<li *ngFor="let sc of category.subCategories">
+				<li *ngFor="let sc of subCategories(category)">
 					
 					<a *ngIf="!sc.updateMode" class="inline" href="#">{{sc.name}}</a>
 					<div *ngIf="!sc.updateMode" class="btn-toolbar pull-right inline" role="toolbar" aria-label="...">
@@ -59,6 +59,12 @@
 				<li><a href="#">Ремонтен компект за шенкел</a></li>
 				<li><a href="#">Болтове за джанти</a></li>-->
 			</ol>
+			<button
+				*ngIf="showExpandButton()" 
+				(click)="expand = !expand" type="button" class="btn btn-small btn-block btn-default">
+				{{expand ? "По-малко" : "Повече"}}
+			</button>
+			
 			<div class="input-group">
 				<input #newSubCategory type="text" class="form-control" placeholder="Нова подкатегория">
 				<span class="input-group-btn">
